--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   ipsa laboriosam laudantium perferendis quo? Ducimus hic
   inventore iste mollitia omnis perspiciatis saepe voluptate voluptatum?
 </p>
-<p>
+<p class="paragraph-4">
 Lorem ipsum dolor sit amet, consectetur adipisicing elit.
 Aliquam aliquid commodi cupiditate eius eveniet incidunt,
 ipsa laboriosam laudantium perferendis quo? Ducimus hic
@@ -70,6 +70,6 @@ inventore iste mollitia omnis perspiciatis saepe voluptate voluptatum?
     Третий элемент
   </li>
 </ul>
-
+<img src = "cupcakes.jpg" alt = "CUPCAKES!!!!">
 </body>
 </html>
