--- a/index.html
+++ b/index.html
@@ -70,6 +70,6 @@ inventore iste mollitia omnis perspiciatis saepe voluptate voluptatum?
     Третий элемент
   </li>
 </ul>
-
+<img src="img.jpg">
 </body>
 </html>
